# titanic-checker-api

./: Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: deploy-to-fly.yml
api/: main.py
app/: main.py
app/api/: data.py  judge.py
data/: test.csv  test_true.csv  train.csv
scripts/: make_df.py
