[tool.poetry]
name = "titanic-checker-api"
version = "0.1.0"
description = ""
authors = ["tkser <tkser.edu@gmail.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.scripts]
start = "api.main:main"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
